[workspace]

resolver = "2"

members = ["_01_1", "_02_1", "_03_1", "_04_1", "_05_1", "_06_1", "_07_1", "_08_1", "_09_1", "_10_1", "_11_1", "_12_1", "_13_1", "_14_1", "_15_1", "_16_1", "_17_1", "_18_1", "_19_1", "_20_1", "_21_1", "_22_1", "_23_1", "_24_1", "_25_1", "_01_2", "_02_2", "_03_2", "_05_2", "_06_2", "_07_2", "_08_2", "_11_2", "_12_2", "_13_2", "_14_2", "_15_2", "_16_2", "_17_2", "_18_2", "_19_2", "_20_2", "_21_2", "_22_2", "_23_2", "_24_2", "_25_2"
]

